--- a/app/src/main/res/layout/activity_food_menu.xml
+++ b/app/src/main/res/layout/activity_food_menu.xml
@@ -12,7 +12,7 @@
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="20dp"
         android:clickable="true"
-        android:contentDescription="@string/order_food"
+        android:contentDescription="@string/order_dishes"
         android:focusable="true"
         android:onClick="orderFoodFABClicked"
         app:layout_constraintBottom_toBottomOf="parent"
