--- a/app/src/main/res/layout/viewpageritem_day_list.xml
+++ b/app/src/main/res/layout/viewpageritem_day_list.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/in_day_list_recyclerview"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:listitem="@layout/recycleritem_dish_list" >
 
 </androidx.recyclerview.widget.RecyclerView>
